--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ flutter:
   assets:
     - assets/google-logo.png
     - assets/bell-icon-logo.png
+    - assets/bell-lgbt-logo.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
