--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  equatable: ^1.2.5
+  flutter_bloc: ^6.0.1
   google_fonts: ^2.1.0
 
 dev_dependencies:
