--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ flutter:
     - assets/bell-icon-logo.png
     - assets/bell-lgbt-logo.png
     - assets/rainbow-icon.png
+    - assets/facebook.jpg
+    - assets/google.jpg
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
