--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  awesome_dialog: ^2.1.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter_bloc: ^7.3.2
