--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   awesome_dialog: ^2.1.0
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.1
   equatable: ^2.0.3
   flutter_bloc: ^7.3.2
   google_fonts: ^2.1.0
