--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.3
   flutter_bloc: ^7.3.2
   google_fonts: ^2.1.0
+  plugin_platform_interface: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +34,7 @@ flutter:
     - assets/bracelet.jpg
     - assets/pendant.jpg
     - assets/ring.jpg
+    - assets/yogi.jpg
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
