--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
    <application
         android:label="bell_security_app"
         android:icon="@mipmap/ic_launcher">
+
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyBkrrghT29DxjqTRkkmt5nEIlDSCi-vk58"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
