--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.3
   flutter_bloc: ^7.3.2
   google_fonts: ^2.1.0
+  google_maps_flutter: ^2.0.0
   plugin_platform_interface: ^2.0.1
 
 dev_dependencies:
