--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ flutter:
     - assets/pendant.jpg
     - assets/ring.jpg
     - assets/yogi.jpg
+    - assets/bracelet2.jpeg
+    - assets/ring.jpeg
+    - assets/bracelet.jpeg
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
