--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,14 @@ dependencies:
   google_fonts: ^2.1.0
   google_maps_flutter: ^2.0.0
   plugin_platform_interface: ^2.0.1
+  firebase_auth: ^3.0.2
+  fluttertoast: ^8.0.8
+  font_awesome_flutter: ^9.2.0
+  formz: ^0.4.0
+  firebase_core: ^1.5.0
+  google_sign_in: ^5.0.7
+  meta: ^1.3.0
+  very_good_analysis: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +36,6 @@ flutter:
   assets:
     - assets/google-logo.png
     - assets/bell-icon-logo.png
-    - assets/bell-lgbt-logo.png
     - assets/rainbow-icon.png
     - assets/facebook.jpg
     - assets/google.jpg
@@ -39,6 +46,7 @@ flutter:
     - assets/bracelet2.jpeg
     - assets/ring.jpeg
     - assets/bracelet.jpeg
+    - assets/bell-logo.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
